--- a/SBMS/package.json
+++ b/SBMS/package.json
@@ -24,6 +24,7 @@
     "@react-native-picker/picker": "^2.7.6",
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
     "expo": "~51.0.9",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.6",
