--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "server": "nodemon server.js",
-        "client": "npm run start --prefix views"
+        "server": "nodemon server.js"
     },
     "dependencies": {
         "bcrypt": "^5.1.1",
@@ -15,14 +14,12 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-rate-limit": "^6.11.0",
-        "express-session": "^1.17.3",
         "helmet": "^7.0.0",
-        "nodemailer": "^6.9.13",
+        "jsonwebtoken": "^9.0.2",
+        "mysql2": "^3.10.0",
         "nodemon": "^2.0.20",
-        "speakeasy": "^2.0.0",
         "universal-cookie": "^6.1.1",
-        "utf8": "^3.0.0",
-        "winston": "^3.13.0"
+        "utf8": "^3.0.0"
     },
     "devDependencies": {
         "nodemon": "^3.0.1"
